<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textview1"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="50sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textview2"
        android:layout_below="@+id/textview1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textview3"
        android:layout_below="@+id/textview2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p2"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_below="@+id/textview3"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p3"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/b1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/botao"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black" />

</RelativeLayout>