<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/bolinha" />

    <TextView
        android:id="@+id/textview1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/b1"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="50sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textview1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtitulo"
        android:textSize="30sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/b2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/botao"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black" />

</RelativeLayout>